force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__ORV027__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ORV027__c</fullName>
    <label>ORV027</label>
    <length>255</length>
    <type>Text</type>
</CustomField>