force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Output_Required_Flow_Area__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Output_Required_Flow_Area__c</fullName>
    <label>Required Flow Area</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>