force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__OW041__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OW041__c</fullName>
    <label>OW041</label>
    <length>255</length>
    <type>Text</type>
</CustomField>