force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Packaging_Material__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Packaging_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packaging Material</label>
    <type>Checkbox</type>
</CustomField>