force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__PARTREV__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PARTREV__c</fullName>
    <label>PARTREV</label>
    <length>10</length>
    <type>Text</type>
</CustomField>