force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__PED_2014_68_EU_CE_mark__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PED_2014_68_EU_CE_mark__c</fullName>
    <label>PED 2014/68/EU (CE mark)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NonePED</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>CET</fullName>
                <label>Temperature Test per ISO 4126</label>
            </value>
            <value>
                <fullName>CEC</fullName>
                <label>Temperature Compensate per ISO 4126</label>
            </value>
            <value>
                <fullName>Blank Value</fullName>
                <isActive>false</isActive>
                <label>Blank Value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>