force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Performance_Tolerance_Input_Units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Performance_Tolerance_Input_Units__c</fullName>
    <label>Press Performance Tolerance Input Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Specified Burst Pressure Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>