force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Positive_Pressure_Value__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Positive_Pressure_Value__c</fullName>
    <label>Positive Pressure Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>