force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Press_Burst_Pressure_Min_Input__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Press_Burst_Pressure_Min_Input__c</fullName>
    <label>Press Burst Pressure Min Input</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>