force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Press_Burst_Pressure_Units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Press_Burst_Pressure_Units__c</fullName>
    <label>Press Burst Pressure Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Pressure_Units</valueSetName>
    </valueSet>
</CustomField>