force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Pressure_Class__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Pressure_Class__c</fullName>
    <label>Pressure Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>