force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Pressure_Rating_Type__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Pressure_Rating_Type__c</fullName>
    <label>Pressure Rating Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Rating_Types</valueSetName>
    </valueSet>
</CustomField>