force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Pressure_Relieving_Temperature__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Pressure_Relieving_Temperature__c</fullName>
    <label>Pressure Relieving Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRTSameAsTemperatureSetting</fullName>
                <label>Same As Temperature Setting</label>
            </value>
            <value>
                <fullName>PRTEnterDifferentTemperatureUnits</fullName>
                <label>Enter Different Temperature/ units</label>
            </value>
            <value>
                <fullName>PRTNone</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>