force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Pressure_Setting__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Pressure_Setting__c</fullName>
    <label>Pressure Setting</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>