force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Pressure_Withstand__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Pressure_Withstand__c</fullName>
    <label>Withstand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive Pressure</fullName>
            </value>
            <value>
                <fullName>No Requirements</fullName>
            </value>
            <value>
                <fullName>Back Pressure</fullName>
                <isActive>false</isActive>
                <label>Back Pressure</label>
            </value>
            <value>
                <fullName>Full Vacuum</fullName>
                <isActive>false</isActive>
                <label>Full Vacuum</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>