force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Product_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Selection</label>
    <type>Checkbox</type>
</CustomField>