force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Quantity__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>