force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Rating_and_Range_Flag__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Rating_and_Range_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rating and Range Flag</label>
    <type>Checkbox</type>
</CustomField>