force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Reach__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Reach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reach</label>
    <type>Checkbox</type>
</CustomField>