force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Relief_Type__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Relief_Type__c</fullName>
    <label>Relief Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pressure Relief</fullName>
            </value>
            <value>
                <fullName>Vacuum Relief</fullName>
            </value>
            <value>
                <fullName>Pressure &amp; Vacuum Relief</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>