force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Relieving_Pressure_at_Inlet__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Relieving_Pressure_at_Inlet__c</fullName>
    <label>Relieving Pressure at Inlet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enter Relieving Pressure Value/ units</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Use Pressure Setting + No Overpressure</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Use Pressure Setting + 3 psi Overpressure</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Use Pressure Setting + 4 psi Overpressure</label>
            </value>
            <value>
                <fullName>10%</fullName>
                <label>Use Pressure Setting + 10% Overpressure</label>
            </value>
            <value>
                <fullName>16%</fullName>
                <label>Use Pressure Setting + 16% Overpressure</label>
            </value>
            <value>
                <fullName>21%</fullName>
                <label>Use Pressure Setting + 21% Overpressure</label>
            </value>
            <value>
                <fullName>% Overpressure</fullName>
                <isActive>false</isActive>
                <label>% Overpressure</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>