force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Relieving_TemperatureRelieving_Temperatu__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Relieving_TemperatureRelieving_Temperatu__c</fullName>
    <label>Relieving Temperature Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deg F</fullName>
            </value>
            <value>
                <fullName>Deg C</fullName>
            </value>
            <value>
                <fullName>Deg R</fullName>
            </value>
            <value>
                <fullName>Deg K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>