force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Required_Flow_Area_Units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Required_Flow_Area_Units__c</fullName>
    <label>Required Flow Area Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>in2</fullName>
            </value>
            <value>
                <fullName>mm2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>