force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__RG1MIN__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RG1MIN__c</fullName>
    <label>RG1MIN</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>