force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__RGEMIN__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RGEMIN__c</fullName>
    <label>RGEMIN</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>