force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__RGSMIN__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RGSMIN__c</fullName>
    <label>RGSMIN</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>