force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__RoHS__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RoHS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RoHS</label>
    <type>Checkbox</type>
</CustomField>