force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Rupture_Disc_Flow_Capacity_Units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Rupture_Disc_Flow_Capacity_Units__c</fullName>
    <label>Rupture Disc Flow Capacity Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACFH</fullName>
            </value>
            <value>
                <fullName>ACFM</fullName>
            </value>
            <value>
                <fullName>Am3/h</fullName>
            </value>
            <value>
                <fullName>Am3/min</fullName>
            </value>
            <value>
                <fullName>kg/h</fullName>
            </value>
            <value>
                <fullName>kg/min</fullName>
            </value>
            <value>
                <fullName>kg/s</fullName>
            </value>
            <value>
                <fullName>lb/h</fullName>
            </value>
            <value>
                <fullName>lb/min</fullName>
            </value>
            <value>
                <fullName>Nm3/h</fullName>
            </value>
            <value>
                <fullName>Nm3/min</fullName>
            </value>
            <value>
                <fullName>SCFH</fullName>
            </value>
            <value>
                <fullName>SCFM</fullName>
            </value>
            <value>
                <fullName>SCMH</fullName>
            </value>
            <value>
                <fullName>(Imperial) gallon/h</fullName>
            </value>
            <value>
                <fullName>(Imperial) gallon/min</fullName>
            </value>
            <value>
                <fullName>(U.S.) gallon/h</fullName>
            </value>
            <value>
                <fullName>(U.S.) gallon/min</fullName>
            </value>
            <value>
                <fullName>barrel/h</fullName>
            </value>
            <value>
                <fullName>ft3/h</fullName>
            </value>
            <value>
                <fullName>ft3/min</fullName>
            </value>
            <value>
                <fullName>L/h</fullName>
            </value>
            <value>
                <fullName>L/min</fullName>
            </value>
            <value>
                <fullName>m3/h</fullName>
            </value>
            <value>
                <fullName>m3/min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>