force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Rupture_Disc_Flow_Capacity_Value__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Rupture_Disc_Flow_Capacity_Value__c</fullName>
    <label>Rupture Disc Flow Capacity Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>