force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Saturation_Pressure_at_inlet_temp_units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Saturation_Pressure_at_inlet_temp_units__c</fullName>
    <label>Saturation Pressure at inlet temp units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Pressure_Units</valueSetName>
    </valueSet>
</CustomField>