force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Seat__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Seat__c</fullName>
    <label>Seat</label>
    <length>30</length>
    <type>Text</type>
</CustomField>