force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__ShowPosSizingCapacityPage__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ShowPosSizingCapacityPage__c</fullName>
    <formula>ISPICKVAL( cdcpc__constrain_product_selection_by_flow__c, &quot;Yes&quot;)
&amp;&amp; NOT(ISPICKVAL(cdcpc__Relief_Type__c, &quot;Vacuum Relief&quot;))
&amp;&amp; IF(
(ISPICKVAL(cdcpc__Relief_Type__c, &quot;Pressure &amp; Vacuum Relief&quot;)), NOT(ISPICKVAL(cdcpc__Constrain_product_selection__c, &quot;Vacuum&quot;)), TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowPosSizingCapacityPage</label>
    <type>Checkbox</type>
</CustomField>