force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Size__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Size__c</fullName>
    <label>Size</label>
    <length>30</length>
    <type>Text</type>
</CustomField>