force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Size_Units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Size_Units__c</fullName>
    <label>Size Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Units</fullName>
            </value>
            <value>
                <fullName>Metric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>