force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Sizing_Request_Item__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Sizing_Request_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Sizing Request Item to the RuptureDisc Sizing Request Record Type</description>
    <label>Sizing Request Item</label>
    <referenceTo>cdcpc__SizingRequestItem__c</referenceTo>
    <relationshipLabel>RD</relationshipLabel>
    <relationshipName>RD</relationshipName>
    <type>Lookup</type>
</CustomField>