force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Sizing_Requests__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Sizing_Requests__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Sizing Requests to the RuptureDisc Sizing Request Record Type</description>
    <label>Sizing Requests</label>
    <referenceTo>cdcpc__SizingRequest__c</referenceTo>
    <relationshipLabel>RD</relationshipLabel>
    <relationshipName>RD</relationshipName>
    <type>Lookup</type>
</CustomField>