force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Sourcing_Constraints__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Sourcing_Constraints__c</fullName>
    <label>Sourcing Constraints</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enter Picklist Values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>