force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Specfic_weight_of_water_at_inlet_condtns__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Specfic_weight_of_water_at_inlet_condtns__c</fullName>
    <label>Specfic weight of water at inlet condtns</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>