force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Special_Range_Units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Special_Range_Units__c</fullName>
    <label>Special Range Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Pressure_Units</valueSetName>
    </valueSet>
</CustomField>