force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Specific_Units_of_water_at_inlet_condtns__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Specific_Units_of_water_at_inlet_condtns__c</fullName>
    <label>Specifc Units of water at inlet cndtns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>lb/in3</fullName>
            </value>
            <value>
                <fullName>lb/ft3</fullName>
            </value>
            <value>
                <fullName>lb/gallon (U.S.)</fullName>
            </value>
            <value>
                <fullName>kg/m3</fullName>
            </value>
            <value>
                <fullName>kg/L</fullName>
            </value>
            <value>
                <fullName>lb/yd3</fullName>
            </value>
            <value>
                <fullName>lb/gallon (Imperial)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>