force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Specific_Volume__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Specific_Volume__c</fullName>
    <label>Specific Volume</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>