force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Specific_Volume_at_90_of_Inlet_Pressure__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Specific_Volume_at_90_of_Inlet_Pressure__c</fullName>
    <label>Specific Volume at 90% of Inlet Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>