force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__SRP__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SRP__c</fullName>
    <label>SRP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>