force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Stagnation_gas_partial_pressure__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Stagnation_gas_partial_pressure__c</fullName>
    <label>Stagnation gas partial pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>