force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Stagnation_vapor_density__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Stagnation_vapor_density__c</fullName>
    <label>Stagnation vapor density</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>