force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Surface_Finish__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Surface_Finish__c</fullName>
    <label>Surface Finish</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <label>20 microinch or better surface finish [20]</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 microinch or better surface finish [15]</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 microinch or better surface finish [12]</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 microinch or better surface finish [10]</label>
            </value>
            <value>
                <fullName>0.5</fullName>
                <label>0.5 micrometer or better surface finish [0.5]</label>
            </value>
            <value>
                <fullName>0.4</fullName>
                <label>0.4 micrometer or better surface finish [0.4]</label>
            </value>
            <value>
                <fullName>0.35</fullName>
                <label>0.35 micrometer or better surface finish [0.35]</label>
            </value>
            <value>
                <fullName>0.26</fullName>
                <label>0.26 micrometer or better surface finish [0.26]</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>