force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Temperature_Ambient__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Temperature_Ambient__c</fullName>
    <label>Temperature Ambient</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>