force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Temperature_Setting_Units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Temperature_Setting_Units__c</fullName>
    <label>Temperature Setting Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Temperature_Units</valueSetName>
    </valueSet>
</CustomField>