force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Temperature_Test_per_ASME__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Temperature_Test_per_ASME__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temperature Test per ASME</label>
    <type>Checkbox</type>
</CustomField>