force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Test_Disc_Price_Method__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Test_Disc_Price_Method__c</fullName>
    <label>Test Disc Price Method</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>