force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__TMR__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TMR__c</fullName>
    <label>TMR</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>